# easytuner

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMPLETE_AUTH_FLOW_TEST.md  CONTINUE_FRONTEND_IMPLEMENTATION.md  CONTRIBUTING.md  COPY_THIS_PROMPT_TO_CONTINUE.txt  COPY_THIS_TO_NEW_PROMPT.txt  CURRENT_STATUS.md  DOCKER_SETUP.md  EPIC02_SUMMARY.md  EPIC03_COMPLETE.md  EPIC03_FINAL_SUMMARY.md  EPIC03_START_HERE.md  EPIC03_STORY01_COMPLETION.md  EPIC03_STORY02_COMPLETION.md  EPIC03_STORY03_COMPLETION.md  EPIC03_STORY04_COMPLETION.md  EPIC03_STORY05_COMPLETION.md  EPIC05_COMPLETION_SUMMARY.md  EPIC05_MVP_QUICK_START.md  EPIC05_START_PROMPT.md  EPIC08_NAVIGATION_FIXES_COMPLETE.md  EPIC08_STORY01_COMPLETE.md  EPIC08_STORY02_COMPLETION.md  EPIC08_STORY04_COMPLETION.md  EPIC08_STORY04_TEST_REPORT.md  EPIC08_STORY05_COMPLETION.md  EPIC08_STORY05_FIX_REPORT.md  EPIC08_STORY05_TEST_REPORT.md  EPIC09_COMPLETION_SUMMARY.md  EPIC09_TEST_REPORT.md  FIXES_COMPLETE.md  FRONTEND_ANALYSIS_COMPLETE.md  FRONTEND_EPIC_COVERAGE_ANALYSIS.md  FRONTEND_MISSING_FEATURES.md  FRONTEND_NEXT_SESSION_PROMPT.md  FRONTEND_REBUILD_COMPLETE.md  FRONTEND_STORIES_COMPLETE_ROADMAP.md  (+33 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS
client/: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile.dev  QUICKSTART.md  README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/public/: robots.txt  sitemap.xml
client/src/: App.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
client/src/components/: ChecksumConfigDialog.tsx  ChecksumDetectPopup.tsx  ChecksumStatus.tsx  ChecksumTester.tsx  ConfidenceGauge.tsx  CreateProjectModal.tsx  EditPanel.tsx  ExportDialog.tsx  Header.tsx  HexViewer.tsx  Map3DViewer.tsx  MapAssistantPanel.tsx  MapPropertiesDialog.tsx  MapTextViewer.tsx  PasswordStrength.tsx  ProjectCard.tsx  ProjectFilters.tsx  ProjectSelector.tsx  ProtectedRoute.tsx  ResultsTable.tsx  TOSModal.tsx  UserMenu.tsx
data/: HexECU.txt  addresses.json
ecumap/: filters.py  hypothesis.py  metrics.py
server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  env.example  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 490127e4c475_add_user_session_project_and_firmware_.py  6ba2e143f0af_add_annotation_audit_log_and_export_.py  92b67af533e6_add_scan_job_and_candidate_models.py  add_project_published_at.py  add_project_vehicle_model.py  add_user_display_name_and_avatar.py  add_user_maps.py
server/app/: __init__.py  config.py  database.py  dependencies.py  main.py
server/app/auth/: dependencies.py  jwt.py  password.py
server/app/detection/: __init__.py  features.py  preprocessing.py  types.py
server/app/models/: __init__.py  annotation.py  assistant_chat.py  audit_log.py  base.py  candidate.py  export.py  firmware_file.py  project.py  scan_job.py  session.py  user.py  user_map.py
server/app/routers/: assistant.py  auth.py  checksum.py  edits.py  files.py  library.py  projects.py  scan.py  user_maps.py
server/app/schemas/: __init__.py  assistant.py  auth.py  checksum.py  edit.py  scan.py  user_map.py
server/app/services/: assistant_service.py  auth_service.py  checksum_service.py  edit_service.py  file_storage.py  scan_queue.py  scan_service.py
server/app/tasks/: __init__.py
server/ecumap/: __init__.py  find_maps.py  interpret.py  metrics.py  scorer.py  segmentation.py
server/tests/: __init__.py  conftest.py  test_main.py
server/tests/integration/: test_auth_api.py  test_auth_dependencies.py  test_auth_refresh_logout.py  test_scan_api.py
server/tests/unit/: test_annotation_audit_export.py  test_checksum_service.py  test_ecumap_filters.py  test_ecumap_scorer.py  test_features.py  test_file_storage.py  test_jwt.py  test_models.py  test_password.py  test_preprocessing.py  test_scan_models.py
(+55 files in other folders)
